test/data/resolver/valid/unlabelled_binding_from_edge.cypher
MATCH (a)-[r:AUTHORED]->(p:Post) RETURN a, r, p
