test/data/resolver/invalid/merge_unknown_edge.cypher
MERGE (a:Person)-[r:AUTHORED]->(t:Tag) RETURN t
